# penpal-core

./: README.md  pyproject.toml
src/core/: __init__.py  geom.py  palettes.py  render.py
tests/: test_geom.py
