[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent A.", email = "git@vincentantaki.com" }
]
requires-python = ">=3.12"
dependencies = [
    "drawsvg>=2.4.1",
    "numpy>=2.4.2",
    "shapely>=2.1.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
